# todo-app

frontend/: .env  tailwind.config.ts
frontend with nextJs/: .env  package-lock.json  package.json
frontend with nextJs/src/app/dashboard/: page.tsx
frontend with nextJs/src/app/login/: page.tsx
frontend with nextJs/src/app/signup/: page.tsx
frontend with nextJs/src/app/ui/: Addtodo.tsx  todoCrud.tsx
frontend with nextJs/src/lib/: crud.ts
frontend with nextJs/src/services/: api.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/types/: commontypes.ts
todo_api/: pyproject.toml  render.yaml  requirements.txt  vercel.json
todo_api/todo_api/: main.py
todo_api/todo_api/config/: db.py
todo_api/todo_api/models/: todo.py
