[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.18"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
cloudinary = "^1.44.1"

[tool.poetry.scripts]
dev = "todo_api.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
